--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ macroquad-tiled = "0.1.1"
 
 [profile.dev.package.'*']
 opt-level = 3
+
+[profile.release]
+opt-level = "s"
+strip = "symbols"
+lto = true
